feat(correspondence): correspondence
notes, suspension letters waiver changes
